added some content

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
-    <p>Hello World!</p>
+    <div id="intro">
+      <div id="text">
+        <h1>Virtual Museum</h1>
+        <p>
+          Welcome to Jonathan Zavialov's Virtual Museum. This exhibit focuses on
+          the earthquake in Sparta in 464 BCE. You will learn about its
+          immediate effects, as well as its lasting influence on Ancient Greek
+          history.
+        </p>
+      </div>
+      <div id="img">
+        <img src="./assets/earthquake.jpeg" />
+      </div>
+    </div>
   </body>
 </html>
