--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
-    <div id="intro">
+    <!-- TODO: add a nav!!! :) -->
+    <div id="hero">
       <div id="text">
         <h1>Virtual Museum</h1>
         <p>
@@ -18,9 +23,8 @@
           history.
         </p>
       </div>
-      <div id="img">
-        <img src="./assets/earthquake.jpeg" />
-      </div>
+
+      <div class="arrow bounce"></div>
     </div>
   </body>
 </html>
