added some content and styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/arrow.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
@@ -23,8 +24,46 @@
           history.
         </p>
       </div>
-
       <div class="arrow bounce"></div>
+    </div>
+
+    <div id="main">
+      <div id="setting">
+        <h1>The Setting</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          dolorem totam numquam quis iste placeat aliquid corporis! Qui
+          architecto dignissimos magni, asperiores accusantium dicta id
+          eligendi, dolor, optio hic vero.
+        </p>
+      </div>
+      <div id="earthquake">
+        <h1>The Earthquake</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolores
+          ipsa nihil tempora iure nesciunt tempore quam rerum molestiae error
+          aliquam illum, officiis architecto, mollitia sapiente aspernatur?
+          Sunt, doloremque suscipit.
+        </p>
+      </div>
+      <div id="impact">
+        <h1>The Impact</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non omnis
+          alias eaque sequi cupiditate ratione nulla facere esse amet! Quidem
+          harum eos suscipit maxime deleniti ducimus ipsum quae reprehenderit
+          neque!
+        </p>
+      </div>
+      <div id="test">
+        <h1>test</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+          ullam libero neque quasi obcaecati officiis saepe perspiciatis,
+          nostrum omnis voluptatibus suscipit, maiores cumque sequi eaque eos
+          voluptatum alias ducimus vero.
+        </p>
+      </div>
     </div>
   </body>
 </html>
