--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,19 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/arrow.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/public/assets/src/initScrollImage.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
     <!-- TODO: add a nav!!! :) -->
+    <script>
+      $(document).ready(() => {
+        initScrollImage();
+      });
+    </script>
     <div id="hero">
       <div id="text">
         <h1>Virtual Museum</h1>
@@ -29,40 +36,49 @@
 
     <div id="main">
       <div id="setting">
-        <h1>The Setting</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-          dolorem totam numquam quis iste placeat aliquid corporis! Qui
-          architecto dignissimos magni, asperiores accusantium dicta id
-          eligendi, dolor, optio hic vero.
-        </p>
+        <div class="text">
+          <h1>The Setting</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            dolorem totam numquam quis iste placeat aliquid corporis! Qui
+            architecto dignissimos magni, asperiores accusantium dicta id
+            eligendi, dolor, optio hic vero.
+          </p>
+        </div>
+        <img id="top-image" src="./assets/images/map.png" />
       </div>
       <div id="earthquake">
-        <h1>The Earthquake</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolores
-          ipsa nihil tempora iure nesciunt tempore quam rerum molestiae error
-          aliquam illum, officiis architecto, mollitia sapiente aspernatur?
-          Sunt, doloremque suscipit.
-        </p>
+        <div class="text">
+          <h1>The Earthquake</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+            dolores ipsa nihil tempora iure nesciunt tempore quam rerum
+            molestiae error aliquam illum, officiis architecto, mollitia
+            sapiente aspernatur? Sunt, doloremque suscipit.
+          </p>
+        </div>
       </div>
       <div id="impact">
-        <h1>The Impact</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non omnis
-          alias eaque sequi cupiditate ratione nulla facere esse amet! Quidem
-          harum eos suscipit maxime deleniti ducimus ipsum quae reprehenderit
-          neque!
-        </p>
+        <div class="text">
+          <h1>The Impact</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non omnis
+            alias eaque sequi cupiditate ratione nulla facere esse amet! Quidem
+            harum eos suscipit maxime deleniti ducimus ipsum quae reprehenderit
+            neque!
+          </p>
+        </div>
       </div>
       <div id="test">
-        <h1>test</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-          ullam libero neque quasi obcaecati officiis saepe perspiciatis,
-          nostrum omnis voluptatibus suscipit, maiores cumque sequi eaque eos
-          voluptatum alias ducimus vero.
-        </p>
+        <div class="text">
+          <h1>test</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            ullam libero neque quasi obcaecati officiis saepe perspiciatis,
+            nostrum omnis voluptatibus suscipit, maiores cumque sequi eaque eos
+            voluptatum alias ducimus vero.
+          </p>
+        </div>
       </div>
     </div>
   </body>
