--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,12 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/public/assets/src/initScrollImage.js"></script>
+    <script src="./assets/src/initScrollImage.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
-    <!-- TODO: add a nav!!! :) -->
     <script>
       $(document).ready(() => {
         initScrollImage();
@@ -24,7 +23,13 @@
         $("#setting").css("height", `${height - 100}px`);
       });
     </script>
+
     <div id="hero">
+      <nav>
+        <a href="/#setting">Setting</a>
+        <a href="/#earthquake">Earthquake</a>
+        <a href="/#impact">Impact</a>
+      </nav>
       <div id="text">
         <h1>Virtual Museum</h1>
         <p>
