--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <script src="./assets/src/initScrollImage.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/hero.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/nav.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
