added some content

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           Welcome to Jonathan Zavialov's Virtual Museum. This exhibit focuses on
           the earthquake in Sparta in 464 BCE. You will learn about its
           immediate effects, as well as its lasting influence on Ancient Greek
-          history.
+          history, including its context in the Peloponnesian War.
         </p>
       </div>
       <div class="arrow bounce"></div>
@@ -52,10 +52,30 @@
         <div class="text">
           <h1>The Setting</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            dolorem totam numquam quis iste placeat aliquid corporis! Qui
-            architecto dignissimos magni, asperiores accusantium dicta id
-            eligendi, dolor, optio hic vero.
+            Within Ancient Greece, tensions were very high during the 460s BCE.
+            Some of the most powerful cities were Athens and Sparta. Only 20
+            years earlier, they had fought together in the Persian War. Notably,
+            in the battle at Thermopylae and Salamis, Spartan troops bravely
+            delayed the Persians, giving Athens enough time to evacuate its
+            cities to safety. (Zhou 107)
+          </p>
+          <p>
+            However, over the next two decades, the two cities grew increasingly
+            opposed to each other. The two cities had many differences, which
+            may have contributed. Athens was a democracy, while Sparta was an
+            oligarchy. Athens was a maritime power, while Sparta was a land
+            power. Athens was a city-state, while Sparta was a military state.
+            Athens was a city of culture, while Sparta was a city of war. Athens
+            was a city of the people, while Sparta was a city of the elite.
+          </p>
+          <p>
+            In these 20 years, the Delian League was created. Many cities were
+            part of it, but notably, not Sparta. With the progression of time,
+            Athens became increasingly more powerful. As some cities began to
+            leave, Athens became the superpower within the league, taking over
+            control of much of Greece in the process. Tensions became even
+            higher when Sparta invaded Attica, the region that Athens was
+            located in.
           </p>
         </div>
         <div class="images" id="top-image">
@@ -73,10 +93,30 @@
         <div class="text">
           <h1>The Earthquake</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-            dolores ipsa nihil tempora iure nesciunt tempore quam rerum
-            molestiae error aliquam illum, officiis architecto, mollitia
-            sapiente aspernatur? Sunt, doloremque suscipit.
+            The earthquake occurred in 464 BCE. It was very strong, having a
+            magnitude of 7.2. To put this into perspective, the earthquake that
+            happened in Haiti in 2010, killing over 200,000, had a magnitude of
+            7. According to ancient historian Thucydides, over 20,000 people
+            died in the Spartan earthquake. However, modern historians say this
+            might have been an exaggeration.
+          </p>
+          <p>
+            The Helots were the working class of Sparta, often working in the
+            farms within the surrounding area. They were often treated poorly,
+            only being allowed to live in the city if they were deemed fit
+            enough to work. The earthquake left the city in chaos, with the
+            Helots taking advantage of the situation. They revolted, taking
+            control of Sparta.
+          </p>
+          <p>
+            Because of the revolt, Sparta requested Athens's help to regain
+            control of the city. In response, Athens sent 4,000 soldiers to
+            help. However, on their way to Sparta, something happened which led
+            to Sparta refusing them. Historians are unsure of exactly what
+            happened, but regardless of what it was, it was enough to cause
+            Sparta to refuse Athens' help (Zhou 108). Sparta's refusal was seen
+            as an act of hostility towards Athens, which was one of the key
+            factors in causing the First Peloponnesian war.
           </p>
         </div>
         <div class="images">
