added works cited

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/hero.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/nav.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/cites.css" />
     <title>Virtual Museum</title>
   </head>
   <body>
@@ -31,6 +32,7 @@
         <a href="/#setting">Setting</a>
         <a href="/#earthquake">Earthquake</a>
         <a href="/#impact">Impact</a>
+        <a href="/#works-cited">Works Cited</a>
         <a href="https://github.com/JonZavialov/virtual-museum" target="_blank"
           >Repository</a
         >
@@ -139,6 +141,27 @@
           </p>
         </div>
       </div>
+    </div>
+
+    <div id="works-cited">
+      <h1>Works Cited</h1>
+      <p class="source">
+        French, A. "The Spartan Earthquake." Greece & Rome, vol. 2, no. 3, Oct.
+        1955, pp. 108-18.
+      </p>
+      <p class="source">
+        Luraghi, Nino. "Becoming Messenian." The Journal of Hellenic Studies,
+        vol. 122, 2002, pp. 45-69.
+      </p>
+      <p class="source">
+        Tucídides., and Charles Forster Smith. History of the Peloponnesian War:
+        Books I and II. Cambridge, Harvard UP, 2003.
+      </p>
+      <p class="source">
+        Zhou, Hongxiang. "Why Did Sparta Refuse Athens's Help after the
+        Earthquake in 464 BC?" Journal of Teachers College Qingdao University,
+        vol. 28, no. 1, 2011, pp. 105-10.
+      </p>
     </div>
   </body>
 </html>
