--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
         <a href="/#setting">Setting</a>
         <a href="/#earthquake">Earthquake</a>
         <a href="/#impact">Impact</a>
-        <a href="https://github.com/JonZavialov/virtual-museum" target="_blank"
-          >Repository</a
-        >
+        <a href="https://github.com/JonZavialov/virtual-museum" target="_blank">
+          Repository
+        </a>
       </nav>
       <div id="text">
         <h1>Virtual Museum</h1>
