--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./assets/src/initScrollImage.js"></script>
+    <script src="./assets/src/detectMob.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/hero.css" />
@@ -24,6 +25,10 @@
 
         let height = $("#setting")[0].getBoundingClientRect().height;
         $("#setting").css("height", `${height - 100}px`);
+
+        if (detectMob()) {
+          window.location.replace("/mobile");
+        }
       });
     </script>
 
