--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
             only being allowed to live in the city if they were deemed fit
             enough to work. The earthquake left the city in chaos, with the
             Helots taking advantage of the situation. They revolted, taking
-            control of Sparta.
+            control of Sparta (Luraghi 49).
           </p>
           <p>
             Because of the revolt, Sparta requested Athens's help to regain
@@ -123,7 +123,7 @@
             happened, but regardless of what it was, it was enough to cause
             Sparta to refuse Athens' help (Zhou 108). Sparta's refusal was seen
             as an act of hostility towards Athens, which was one of the key
-            factors in causing the First Peloponnesian war.
+            factors in causing the First Peloponnesian war (French 109).
           </p>
         </div>
         <div class="images">
@@ -139,10 +139,33 @@
         <div class="text">
           <h1>The Impact</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non omnis
-            alias eaque sequi cupiditate ratione nulla facere esse amet! Quidem
-            harum eos suscipit maxime deleniti ducimus ipsum quae reprehenderit
-            neque!
+            The biggest effect of the earthquake was the fact that it caused the
+            revolt of the Spartan helots. The earthquake set off a chain of
+            events which eventually led to one of the most destructive wars in
+            human history.
+          </p>
+          <p>
+            The Spartans would eventually win the Peloponnesian War, changing
+            the course of Ancient Greek history forever. Because of their loss,
+            Athens had to dismantle the Delian League, as well as replace their
+            democratic system with an oligarchy.
+          </p>
+          <p>
+            The lasting effects of the war were felt for centuries. It forever
+            changed the relationships between Greek city-states, and some even
+            claim that the war led to the rise of the Macedonian Empire, which
+            would eventually conquer the Greek city-states.
+          </p>
+        </div>
+        <div class="images">
+          <img src="./assets/images/first-war.png" />
+          <p>
+            Pericles's Funeral Oration (Perikles hält die Leichenrede) by
+            Philipp Foltz (1852)
+            <br />
+            <br />
+            This depicts Pericles delivering a speech at a funeral for the dead
+            at the end of the first peloponnesian war.
           </p>
         </div>
       </div>
