--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,23 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap"
       rel="stylesheet"
     />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./assets/src/initScrollImage.js"></script>
     <script src="./assets/src/detectMob.js"></script>
     <script src="./assets/src/changeHeights.js"></script>
+
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/hero.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/nav.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/cites.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/styles/timeline.css"
+    />
+
     <title>Virtual Museum</title>
   </head>
   <body>
@@ -131,6 +139,48 @@
             City of Sparta destroyed by the earthquake of 464 B.C., according to
             the painting by Egisto
           </p>
+        </div>
+      </div>
+
+      <div id="timeline">
+        <div class="time">
+          <p class="year">478 BCE</p>
+          <p class="description">
+            Athens rebuilds its walls, which had been destroyed by the Persians
+          </p>
+          <p class="description">
+            It connected the city to the sea, making it more defensible
+          </p>
+          <p class="description">
+            This would later benefit Athens when Sparta tried to starve them out
+            of their walls
+          </p>
+          <p class="description">
+            It also hurt them, because the close quarters caused a major plague
+          </p>
+        </div>
+        <div class="time">
+          <p class="year">465 BCE</p>
+          <p class="description">Sparta begins making plans to invade Attica</p>
+        </div>
+        <div class="time">
+          <p class="year">464 BCE</p>
+          <p class="description">Earthquake hits Sparta</p>
+          <p class="description">The Helots take this opportunity to revolt</p>
+          <p class="description">
+            Sparta asks for Athens' help, and then refuses once it arrives
+          </p>
+        </div>
+        <div class="time">
+          <p class="year">451 BCE</p>
+          <p class="description">Peace of Callias is signed</p>
+          <p class="description">
+            Brings Corinth and Athens to peace after 9 years of war
+          </p>
+        </div>
+        <div class="time">
+          <p class="year">431 BCE</p>
+          <p class="description">Official Peloponnesian War begins</p>
         </div>
       </div>
 
