--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="./assets/src/initScrollImage.js"></script>
     <script src="./assets/src/detectMob.js"></script>
     <script src="./assets/src/changeHeights.js"></script>
+    <script src="./assets/src/addTimelineHovers.js"></script>
 
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
@@ -43,6 +44,7 @@
       <nav>
         <a href="/#setting">Setting</a>
         <a href="/#earthquake">Earthquake</a>
+        <a href="/#timeline">Timeline</a>
         <a href="/#impact">Impact</a>
         <a href="/#works-cited">Works Cited</a>
         <a href="https://github.com/JonZavialov/virtual-museum" target="_blank"
@@ -143,44 +145,53 @@
       </div>
 
       <div id="timeline">
-        <div class="time">
-          <p class="year">478 BCE</p>
-          <p class="description">
-            Athens rebuilds its walls, which had been destroyed by the Persians
-          </p>
-          <p class="description">
-            It connected the city to the sea, making it more defensible
-          </p>
-          <p class="description">
-            This would later benefit Athens when Sparta tried to starve them out
-            of their walls
-          </p>
-          <p class="description">
-            It also hurt them, because the close quarters caused a major plague
-          </p>
-        </div>
-        <div class="time">
-          <p class="year">465 BCE</p>
-          <p class="description">Sparta begins making plans to invade Attica</p>
-        </div>
-        <div class="time">
-          <p class="year">464 BCE</p>
-          <p class="description">Earthquake hits Sparta</p>
-          <p class="description">The Helots take this opportunity to revolt</p>
-          <p class="description">
-            Sparta asks for Athens' help, and then refuses once it arrives
-          </p>
-        </div>
-        <div class="time">
-          <p class="year">451 BCE</p>
-          <p class="description">Peace of Callias is signed</p>
-          <p class="description">
-            Brings Corinth and Athens to peace after 9 years of war
-          </p>
-        </div>
-        <div class="time">
-          <p class="year">431 BCE</p>
-          <p class="description">Official Peloponnesian War begins</p>
+        <h1>Timeline</h1>
+        <div id="main-times">
+          <div class="time">
+            <p class="year">478 BCE</p>
+            <p class="description">
+              Athens rebuilds its walls, which had been destroyed by the
+              Persians
+            </p>
+            <p class="description">
+              It connected the city to the sea, making it more defensible
+            </p>
+            <p class="description">
+              This would later benefit Athens when Sparta tried to starve them
+              out of their walls
+            </p>
+            <p class="description">
+              It also hurt them, because the close quarters caused a major
+              plague
+            </p>
+          </div>
+          <div class="time">
+            <p class="year">465 BCE</p>
+            <p class="description">
+              Sparta begins making plans to invade Attica
+            </p>
+          </div>
+          <div class="time">
+            <p class="year">464 BCE</p>
+            <p class="description">Earthquake hits Sparta</p>
+            <p class="description">
+              The Helots take this opportunity to revolt
+            </p>
+            <p class="description">
+              Sparta asks for Athens' help, and then refuses once it arrives
+            </p>
+          </div>
+          <div class="time">
+            <p class="year">451 BCE</p>
+            <p class="description">Peace of Callias is signed</p>
+            <p class="description">
+              Brings Corinth and Athens to peace after 9 years of war
+            </p>
+          </div>
+          <div class="time">
+            <p class="year">431 BCE</p>
+            <p class="description">Official Peloponnesian War begins</p>
+          </div>
         </div>
       </div>
 
