added some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,10 @@
             <p class="description">
               Sparta begins making plans to invade Attica
             </p>
+            <p class="description">
+              They would never be able to complete these plans due to the
+              earthquake
+            </p>
           </div>
           <div class="time">
             <p class="year">464 BCE</p>
@@ -190,6 +194,14 @@
           <div class="time">
             <p class="year">431 BCE</p>
             <p class="description">Official Peloponnesian War begins</p>
+            <p class="description">
+              It begins in Poteideia, which was part of the Peloponnesian league
+            </p>
+            <p class="description">
+              Athens fought for control of this area because it had large
+              forests
+            </p>
+            <p class="description">The war would last for 27 years</p>
           </div>
         </div>
       </div>
