--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <script src="./assets/src/detectMob.js"></script>
     <script src="./assets/src/changeHeights.js"></script>
 
+    <link rel="icon" href="./assets/images/favicon.ico" />
+
     <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/arrow.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/hero.css" />
