made some improvements

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,10 @@
           history, including its context in the Peloponnesian War.
         </p>
       </div>
+      <p id="caption">
+        The ruins of a monastery at the base of Mt. Ithome, the mountain where
+        the Spartan Helots made their stronghold after the earthquake.
+      </p>
       <div class="arrow bounce"></div>
     </div>
 
@@ -118,12 +122,24 @@
             might have been an exaggeration.
           </p>
           <p>
-            The Helots were the working class of Sparta, often working in the
-            farms within the surrounding area. They were often treated poorly,
-            only being allowed to live in the city if they were deemed fit
-            enough to work. The earthquake left the city in chaos, with the
-            Helots taking advantage of the situation. They revolted, taking
-            control of Sparta (Luraghi 49).
+            In ancient Sparta, the helots were treated as slaves. They worked in
+            the fields surrounding Sparta, having made to give a majority of
+            anything they produce to Sparta. Sometimes, if they were deemed fit
+            to work, they could live in the city. The Helots that lived within
+            Sparta took care of homes, did construction, and anything else that
+            the Spartan citizen did not want to do. The helots were treated
+            horribly. They were subjects of selective breeding, among other
+            horrors. The strong would live, and the weak or unwilling to work
+            were thrown out or put to death (Luraghi 45).
+          </p>
+          <p>
+            The earthquake left the city in chaos, with the Helots taking
+            advantage of the situation. They revolted and took control of Sparta
+            for some time until the warriors were able to take it back. The
+            reason for the revolt is how badly they had been mistreated by
+            Sparta. They also greatly outnumbered the Spartan citizens, with
+            there being 7 helots for every 1 Spartan (Luraghi 49). During the
+            revolt, they made their stronghold on Mt. Ithome, pictured above.
           </p>
           <p>
             Because of the revolt, Sparta requested Athens's help to regain
@@ -139,9 +155,11 @@
         <div class="images">
           <img src="./assets/images/earthquake.jpeg" />
           <p>
-            City of Sparta destroyed by the earthquake of 464 B.C., according to
-            the painting by Egisto
+            City of Sparta destroyed by the earthquake of 464 B.C., painting by
+            Egisto
           </p>
+          <img src="./assets/images/helots.jpg" />
+          <p>Helots being beaten by Spartans, 20th century drawing</p>
         </div>
       </div>
 
@@ -255,7 +273,7 @@
         vol. 122, 2002, pp. 45-69.
       </p>
       <p class="source">
-        Tucídides., and Charles Forster Smith. History of the Peloponnesian War:
+        Thucydides, and Charles Forster Smith. History of the Peloponnesian War:
         Books I and II. Cambridge, Harvard UP, 2003.
       </p>
       <p class="source">
